samples/_failures_safe/1761631540_99a575_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2b72324.c: In function ‘main’:
./samples/SAFE/__tmp_e2b72324.c:137:5: error: expected declaration or statement at end of input
  137 |     if (scanf("%d", &startVertex) != 1 || startVertex < 0 || startVertex > 4) {
      |     ^~
./samples/SAFE/__tmp_e2b72324.c:137:5: error: expected declaration or statement at end of input
